# PRG-MPC

./: CMakeLists.txt  test.cpp  trial_mpc  trial_mpc.cpp
prg_mpc-master/prg_mpc-master/: README.md
prg_mpc-master/prg_mpc-master/quad_mpc/: MAIN.m  Quad_mpc_acado.mlx  README.md  model4.m  quad_dyn_mpc.m  quad_mpc.cpp  quad_mpc_4.cpp  quad_mpc_4_data_acadodata_M3.txt  quad_mpc_data_acadodata_M3.txt  quat_mult.m  quat_rot.m
trial2/: CMakeLists.txt  trial_mpc2  trial_mpc2.cpp
trials/: MPC_trial1.m  Quad_MPC_data_acadodata_M1.txt  Quad_MPC_data_acadodata_M2.txt  simplerocket.cpp  trial1.asv  trial1.m
